Update .env with comment on API keys
Added a comment indicating the need to replace dummy API keys.

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 # REPLACE THE VALUES BELOW WITH YOUR ACTUAL KEYS IF NOT AUTOMATICALLY SET
+# THIS IS ONLY DUMY API KEYS
 
 VITE_SUPABASE_URL=https://dummy.supabase.co
 VITE_SUPABASE_ANON_KEY=dummykey.updateyourkkey.here
